--- a/style.css
+++ b/style.css
@@ -10,7 +10,8 @@ body{
     /* border: 1px #808080 solid; */
 
    
-    height: 100vh;
+    position: relative;
+    min-height: 100vh;
     /* border: 1px solid #888; */
     box-sizing: border-box;
     padding: 20px;
@@ -224,6 +225,36 @@ body{
  .semua-produk .card p{
   font-size: 12px;
  }
+
+ .header {
+  position: sticky;
+  top: 0;
+  background-color: #fff; /* Ganti dengan warna latar belakang yang Anda inginkan */
+  z-index: 100; /* Ini bisa disesuaikan sesuai kebutuhan Anda */
+}
+
+ .footer {
+  position: sticky;
+  bottom: 0;
+  background-color: #ffffff;
+  /* box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1); */
+  padding: 10px;
+
+ 
+}
+
+.footer img{
+  max-width: 25px;
+}
+
+.footer a{
+  margin: 0;
+  color: #808080;
+  text-decoration: none;
+
+}
+
+
 
 
 
