--- a/style.css
+++ b/style.css
@@ -15,7 +15,6 @@ body{
     /* border: 1px solid #888; */
     box-sizing: border-box;
     padding: 20px;
-    position: relative;
     background-color: #ffffff;
     box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1);
 }
@@ -97,9 +96,12 @@ body{
     border-radius: 50%;
     text-align: center;
     font-size: 15px;
-    
+    background-color: orange;
+    width: 28px;
+    height: 30px;
     
   }
+
 
   .kategori .btn-next{
     position: absolute;
@@ -109,7 +111,12 @@ body{
     border-radius: 50%;
     text-align: center;
     font-size: 15px;
+    background-color: orange;
+    width: 28px;
+    height: 30px;
   }
+
+
 
   .btn-search{
     width: 40px;
@@ -197,6 +204,9 @@ body{
   border-radius: 50%;
   text-align: center;
   font-size: 15px;
+  background-color: orange;
+    width: 28px;
+    height: 30px;
   
   
 }
@@ -209,6 +219,9 @@ body{
   border-radius: 50%;
   text-align: center;
   font-size: 15px;
+  background-color: orange;
+    width: 28px;
+    height: 30px;
 }
 
 
@@ -237,10 +250,9 @@ body{
   position: sticky;
   bottom: 0;
   background-color: #ffffff;
-  /* box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1); */
+  box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1);
   padding: 10px;
-
- 
+  border-radius: 12px;
 }
 
 .footer img{
