--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body{
 .main{
     background-color: #ffffff;
     max-width: 512px;
-    padding: 20px;
+    
     /* border: 1px #808080 solid; */
 
    
@@ -14,7 +14,8 @@ body{
     min-height: 100vh;
     /* border: 1px solid #888; */
     box-sizing: border-box;
-    padding: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
     background-color: #ffffff;
     box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1);
 }
